--- a/index.html
+++ b/index.html
@@ -1,24 +1,57 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<meta charset="UTF-8">
-	<title>Hangman Game</title>
-	<link rel="stylesheet" type="text/css" href="assets/ccs/reset.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<script rel="stylesheet" type="text/javascript" src="assets/hangman.js"></script>
-
+    <meta charset="UTF-8">
+    <title>Hangman Game</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
+
 <body>
-	<div class="wrapper">
-		<div class="game">
-			<h1> Hangman </h1>
-			<p>Press any key to start!</p>
-			<p>You Have 15 Guesses left!</p>
-			<p>Letter you have already Guessed. </p>
-		</div>
-		 <p id="answer"></p>
-	</div>
+    <div class="container">
+        <div class="jumbotron">
+            <h1 class="text-center">HANDYMAN HANGMAN</h1>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title" id="guessWord">Guess the Item used by a Handyman</h3>
+            </div>
+            <div class="panel-body">
+                <h2 id="wordGuess">_ _ _ _ _ _ _</h2>
+            </div>
+        </div>
+
+        <div class="panel panel-default">
+            <div class="panel-body">
+                Letters Guessed Wrong: <span id="wrongGuess"></span>
+            </div>
+        </div>
+
+        <div class="panel panel-default">
+            <div class="panel-body">
+                Number of Guesses Left: <span id="numGuess"></span>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-body">
+            Wins: <span id="Wins"></span>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-body">
+            Losses: <span id="Losses"></span>
+            </div>
+        </div>
+    </div>
+   <!--  <script rel="stylesheet" type="text/javascript" src="assets/javascript/game.js"></script> -->
+   <script src="assets/javascript/game.js"></script>
 </body>
+
 </html>
-
-
